# arxiv-scout

./: .gitignore  Cargo.toml  README.md  config.example.toml  config.toml
.claude/agents/: arxiv-paper-recommender.md
.github/workflows/: daily.yml  release.yml
digests/: 2026-03-07.md  2026-03-09.md  2026-03-10.md  2026-03-11.md  2026-03-12.md  2026-03-13.md  2026-03-14.md  2026-03-15.md  2026-03-16.md  2026-03-17.md  2026-03-18.md  2026-03-19.md  2026-03-20.md  2026-03-21.md  2026-03-22.md  2026-03-23.md  2026-03-24.md  2026-03-25.md  2026-03-26.md  2026-03-27.md  2026-03-30.md  2026-03-31.md  2026-04-01.md  2026-04-02.md  2026-04-03.md  2026-04-04.md  2026-04-05.md  2026-04-06.md  2026-04-07.md  2026-04-08.md  2026-04-09.md  2026-04-11.md  2026-04-12.md  2026-04-13.md  2026-04-14.md  2026-04-15.md  2026-04-16.md  2026-04-17.md  2026-04-18.md  2026-04-19.md  (+85 more)
src/: analyzer.rs  config.rs  filter.rs  main.rs  models.rs  storage.rs
src/fetcher/: arxiv.rs  mod.rs  pdf.rs
src/llm/: anthropic.rs  genai_provider.rs  mod.rs  openai_compat.rs
src/notifier/: email.rs  markdown.rs  mod.rs
