[package]
name = "paper-scout"
version = "0.1.0"
edition = "2021"
description = "Daily arXiv paper digest powered by LLM analysis"

[[bin]]
name = "paper-scout"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
roxmltree = "0.20"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
